--- a/Room_Control_Final_2025_1.ioc
+++ b/Room_Control_Final_2025_1.ioc
@@ -35,26 +35,29 @@ Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM3
 Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA6
-Mcu.Pin11=PB10
-Mcu.Pin12=PC7
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13 (JTMS-SWDIO)
-Mcu.Pin17=PA14 (JTCK-SWCLK)
-Mcu.Pin18=PB3 (JTDO-TRACESWO)
-Mcu.Pin19=PB4 (NJTRST)
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB10
+Mcu.Pin14=PC7
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13 (JTMS-SWDIO)
+Mcu.Pin19=PA14 (JTCK-SWCLK)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB5
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin20=PB3 (JTDO-TRACESWO)
+Mcu.Pin21=PB4 (NJTRST)
+Mcu.Pin22=PB5
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
@@ -62,7 +65,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -82,6 +85,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0.Locked=true
 PA0.Signal=ADCx_IN5
@@ -171,6 +175,10 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC4.Mode=Asynchronous
+PC4.Signal=USART3_TX
+PC5.Mode=Asynchronous
+PC5.Signal=USART3_RX
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=KEYPAD_C4
 PC7.Locked=true
@@ -211,7 +219,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -285,6 +293,8 @@ TIM3.Period=100 - 1
 TIM3.Prescaler=8000 - 1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-L476RG
